--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,3 +30,6 @@
         - name: Run tests
           run: |
             python -m unittest tests/*test.py
+        - name: Run app
+          run: |
+            gunicorn --bind 0.0.0.0:80 run:app
