--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,4 +32,4 @@
             python -m unittest tests/*test.py
         - name: Run app
           run: |
-            gunicorn --bind 0.0.0.0:80 run:app
+            gunicorn run:app
