--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,10 @@
   name: limbook-api-ci
 
   on:
+    push:
+      branches:
+        - develop
+        - master
     pull_request:
       branches:
         - develop
@@ -12,17 +16,33 @@
       strategy:
         matrix:
           python-version: ['3.x']
+
       name: Python ${{ matrix.python-version }}
       steps:
         - uses: actions/checkout@v2
+
         - name: Setup Python
           uses: actions/setup-python@v2
           with:
             python-version: ${{ matrix.python-version }}
             architecture: x64
+
         - name: Install dependencies
           run: |
             pip install -r requirements.txt
+
         - name: Run tests
           run: |
             python -m unittest tests/*test.py
+
+        - name: Deploy to staging
+          if: github.ref == 'refs/heads/develop'
+          run: |
+            git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_STAGE_APP_NAME }}.git
+            git push heroku HEAD:master -f
+
+        - name: Deploy to production
+          if: github.ref == 'refs/heads/master'
+          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_PROD_APP_NAME }}.git
+          git push heroku HEAD:master -f
+
