--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -43,6 +43,7 @@
 
         - name: Deploy to production
           if: github.ref == 'refs/heads/master'
-          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_PROD_APP_NAME }}.git
-          git push heroku HEAD:master -f
+          run: |
+            git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_PROD_APP_NAME }}.git
+            git push heroku HEAD:master -f
 
