--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -53,11 +53,13 @@
           if: github.ref == 'refs/heads/develop'
           run: |
             heroku git:remote -a staging-limbook-api
+            git filter-branch -- --all
             git push heroku HEAD:master
 
         - name: Deploy to production
           if: github.ref == 'refs/heads/master'
           run: |
             heroku git:remote -a limbook-api
+            git filter-branch -- --all
             git push heroku HEAD:master
 
