--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,31 +35,36 @@
           run: |
             python -m unittest tests/*test.py
 
-        - name: Set heroku credentials
-          env:
-            HEROKU_LOGIN: ${{ secrets.HEROKU_LOGIN }}
-            HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          run: |
-            cat > ~/.netrc << EOF
-            machine api.heroku.com
-              login $HEROKU_LOGIN
-              password $HEROKU_API_KEY
-            machine git.heroku.com
-              login $HEROKU_LOGIN
-              password $HEROKU_API_KEY
-            EOF
-
-        - name: Deploy to staging
-          if: github.ref == 'refs/heads/develop'
-          run: |
-            heroku git:remote -a staging-limbook-api
-            git filter-branch -- --all
-            git push heroku HEAD:master
-
-        - name: Deploy to production
-          if: github.ref == 'refs/heads/master'
-          run: |
-            heroku git:remote -a limbook-api
-            git filter-branch -- --all
-            git push heroku HEAD:master
+#   Various rejection issues by heroku and feel like hack
+#   Instead using heroku auto deployment feature is better and smooth
+#   Also they have review app feature that creates review app for every
+#   new pull request.
+#
+#        - name: Set heroku credentials
+#          env:
+#            HEROKU_LOGIN: ${{ secrets.HEROKU_LOGIN }}
+#            HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+#          run: |
+#            cat > ~/.netrc << EOF
+#            machine api.heroku.com
+#              login $HEROKU_LOGIN
+#              password $HEROKU_API_KEY
+#            machine git.heroku.com
+#              login $HEROKU_LOGIN
+#              password $HEROKU_API_KEY
+#            EOF
+#
+#        - name: Deploy to staging
+#          if: github.ref == 'refs/heads/develop'
+#          run: |
+#            heroku git:remote -a staging-limbook-api
+#            git filter-branch -- --all
+#            git push heroku HEAD:master
+#
+#        - name: Deploy to production
+#          if: github.ref == 'refs/heads/master'
+#          run: |
+#            heroku git:remote -a limbook-api
+#            git filter-branch -- --all
+#            git push heroku HEAD:master
 
