--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Flask==1.0.2
+Faker==4.0.2
+Flask==1.1.2
+Flask-Cors==3.0.8
+Flask-Migrate==2.5.3
+Flask-Seeder==1.1.1
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
+python-jose-cryptodome==1.3.2
+psycopg2-binary==2.8.5
