Fix: test failing due to relocation of test directory

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -33,7 +33,7 @@
 
         - name: Run tests
           run: |
-            python -m unittest tests/*test.py
+            python -m unittest limbook_api/tests/*test.py
 
         - name: Set heroku credentials
           env:
