--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,7 @@
       runs-on: ubuntu-latest
       strategy:
         matrix:
-          python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+          python-version: [3.7, 3.x]
 
       name: Python ${{ matrix.python-version }}
       steps:
