Chore: Add pytest support
- Add pytest to requirements.txt
- Update action.yml to use pytest to run tests

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -33,7 +33,7 @@
 
         - name: Run tests
           run: |
-            python -m unittest limbook_api/tests/test*.py
+            pytest
 
 #        - name: Set heroku credentials
 #          env:
