Feat: Add redis queue to handle mail
- add redis and rq
- update config and requirements to reflect the changes
- update code to inforporate redis queue

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,9 +18,12 @@
           python-version: [3.7, 3.x]
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
-        EMAIL_USER: ${{ secrets.EMAIL_USER }}
-        EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+        SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+        REDIS_URL: ${{ secrets.REDIS_URL }}
+        MAIL_SERVER: ${{ secrets.MAIL_SERVER }}
+        MAIL_PORT: ${{ secrets.MAIL_PORT }}
+        MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+        MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
 
       name: Python ${{ matrix.python-version }}
       steps:
